-{ * * }- admin service stats methods